--- a/broccoli/BroccoliMvc/Views/Home/Index.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/Index.cshtml
@@ -68,6 +68,17 @@
                             </tr>
                         </table>
                     </div>
+                    <div class="panel" title="Третья панель">
+                        <table class="open-account-instructions hr-shadow">
+                            <tr>
+                                <td>
+                                    <div class="take-your-system">
+                                        Получите свой советник что ли...
+                                    </div>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
