--- a/broccoli/BroccoliMvc/Views/PersonalCabinet/CabinetMenu.cshtml
+++ b/broccoli/BroccoliMvc/Views/PersonalCabinet/CabinetMenu.cshtml
@@ -2,7 +2,7 @@
     <h5 onclick="window.location = '@Url.Action("Index", "PersonalCabinet")'">Личный кабинет</h5>
     <h5 onclick="window.location = '@Url.Action("Statistics", "PersonalCabinet")'">Статистика</h5>
     <h4>Счета</h4>
-        <h5>Открыть счет</h5>
+    <h5 onclick="window.location = 'http://www.forexinn.ru/register/a/broccoli'">Открыть счет</h5>
         <h5 onclick="window.location = '@Url.Action("ActivateAccount", "PersonalCabinet")'">Активировать счет</h5>
         <h5 onclick="window.location = '@Url.Action("AccountStatus", "PersonalCabinet")'">
             Статус счетов 
@@ -26,6 +26,6 @@
         </h5>
     <h4>Служба поддержки</h4>
         <h5>Мои письма</h5>
-        <h5>Написть</h5>
+        <h5>Написать</h5>
         <h5>Рекомендации</h5>
 </td>
