--- a/broccoli/BroccoliMvc/Views/Home/Index.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Broccoli Trade";
+    ViewBag.Title = "Broccoli Trade - Брокколи Трейд. Торговые системы. Торговые роботы. Обучение форекс. Интернет торговля. Биржи. Форекс. Форекс биржи.";
     Layout = "~/Views/Shared/_Layout.cshtml";
     
 }
