--- a/broccoli/BroccoliMvc/Views/Home/Index.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/Index.cshtml
@@ -16,8 +16,9 @@
         <div class="slide-1">
             <img class="broccoli" src="@Url.Content("~/Content/img/broccoli.png")"/>
             <div class="text">
-                <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
-                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <h2>Здоровые инвестиции от 5 до 100% в месяц!</h2>
+                <p>От недельных до многолетних инвестиций. Для дерзких и умеренных инвесторов!</p>
+                <a>Подробнее</a>
             </div>
         </div>
     </div>
