fix my trip list

--- a/broccoli.partner/BroccoliMvc/Content/Site.css
+++ b/broccoli.partner/BroccoliMvc/Content/Site.css
@@ -412,6 +412,7 @@ hr {
 
 .content .banner .slider .broccoli {
     margin-top: 15px;
+    margin-left: 50px;
     position: absolute;
     width: 185px;
 }
