--- a/broccoli.partner/BroccoliMvc/Views/Home/Index.cshtml
+++ b/broccoli.partner/BroccoliMvc/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
 <div class="banner">
     <div class="slider">
         <div class="slide-1">
-            <img class="broccoli" src="@Url.Content("~/Content/img/broccoli.png")"/>
+            <img class="broccoli" src="@Url.Content("~/Content/img/lRKb-zv5wcM.png")"/>
             <div class="text">
                 <h2>Партнерам</h2>
                 <p>От недельных до многолетних инвестиций. Для дерзких и консервативных инвесторов!</p>
