--- a/broccoli/BroccoliMvc/Views/Home/BrokerInfo.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/BrokerInfo.cshtml
@@ -36,14 +36,24 @@
         <span>Партнерский код: <font>broccoli</font></span>
     </div>
     <h4>Торговые условия</h4>
-    <table>
-        <tr>
-            <td>
-                
-            </td>
-            <td>
-                
-            </td>
-        </tr>
-    </table>
+    <ul class="trading-terms">
+        <li>Типы счетов: Cent, Classic, PAMM</li>
+        <li>Кредитное плечо от 1:10 до 1:500</li>
+        <li>Минимальный размер лота 0.01</li>
+        <li>Узкий плавающий спред</li>
+        <li>Исполнение ордеров Market Execution</li>
+        <li>Разрешена торговля советниками</li>
+        <li>Ликвидность 7 банков от BBO</li>
+        <li>Торговля Forex, Metals, CFD, Oil</li>
+        <li>Торговая платформа: MetaTrader 4</li>
+    </ul>
+    <div class="broker">
+        <img src="@Url.Content("~/Content/img/broker-logo.png")"/>
+        <span class="button">
+            <a href="http://www.forexinn.ru/register/a/broccoli" target="_blank"><input class="large" type="button" value="Открыть счет у Брокера" /></a>
+        </span>
+        <span>Партнерский код: <font>broccoli</font></span>
+    </div>
+    <br/>
+    <br/>
 </div>
