--- a/broccoli/BroccoliMvc/Views/Shared/_LayoutMin.cshtml
+++ b/broccoli/BroccoliMvc/Views/Shared/_LayoutMin.cshtml
@@ -39,5 +39,6 @@
                 <a href="#top">Наверх</a>
             </div>
         </div>
+        <script type="text/javascript"> _shcp = []; _shcp.push({ widget_id: 565983, widget: "Chat", side: "right", position: "top", template: "green", title: "Онлайн консультант", title_offline: "Оффлайн" }); (function () { var hcc = document.createElement("script"); hcc.type = "text/javascript"; hcc.async = true; hcc.src = ("https:" == document.location.protocol ? "https" : "http") + "://widget.siteheart.com/apps/js/sh.js"; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(hcc, s.nextSibling); })(); </script>
     </body>
 </html>
